--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,21 @@
 spring.application.name=Bookstan
+
+# H2 Database Configuration
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2-console
+
+spring.datasource.url=jdbc:h2:mem:bookstandb
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=
+
+# JPA/Hibernate Configuration
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.jpa.hibernate.ddl-auto=update
+# 'update': atualiza o schema se necessário (bom para desenvolvimento)
+# 'create-drop': cria o schema ao iniciar e destrói ao finalizar (bom para testes)
+# 'validate': valida se o schema corresponde às entidades
+# 'none': não faz nada com o schema (usado em produção com migrações manuais ou Flyway/Liquibase)
+
+spring.jpa.show-sql=true
+# Opcional: mostra as queries SQL geradas no console, útil para debug
