--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,9 @@ target/
 !**/src/main/**/target/
 !**/src/test/**/target/
 
+# Arquivos de configuração local
+src/main/resources/application-local.properties
+
 ### STS ###
 .apt_generated
 .classpath
