📚 docs(config): Add PostgreSQL datasource configuration comments to application.properties
- Added commented-out PostgreSQL datasource configuration properties to guide users on configuring the application for PostgreSQL.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,6 +18,12 @@ spring.application.name=Bookstan
 #spring.datasource.password=
 #spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 
+# PostgreSQL DataSource Configuration
+# Inseridos no arquivo 'application-local.properties'
+#spring.datasource.url=jdbc:postgresql://localhost:5432/<NOME_DO_SEU_BANCO_DE_DADOS>
+#spring.datasource.username=<SEU_USUARIO_POSTGRES>
+#spring.datasource.password=<SUA_SENHA_POSTGRES>
+
 # Hibernate/JPA Configuration for PostgreSQL
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 # spring.jpa.hibernate.ddl-auto:
