✨ feat(livro): Implementa paginação, ordenação e documentação para listagem de livros
- Altera o endpoint `GET /api/livros` para retornar uma página de livros, permitindo a paginação e ordenação dos resultados.
- Adiciona suporte para os parâmetros de consulta `page`, `size` e `sort` para controlar a paginação e a ordenação.
- Atualiza a documentação da API para refletir as alterações na listagem de livros, incluindo detalhes sobre os parâmetros de paginação e ordenação.
- Modifica o método `buscarTodosLivros` no `LivroService` para aceitar um objeto `Pageable` e retornar um objeto `Page<LivroResponseDTO>`.
- Adiciona testes unitários e de integração para garantir o funcionamento correto da paginação e ordenação.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -38,4 +38,4 @@ spring.jpa.hibernate.ddl-auto=update
 
 # Opcional: Mostra o SQL gerado pelo Hibernate (útil para debug)
 spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.format_sql=true # Formata o SQL no log
+spring.jpa.properties.hibernate.format_sql=true
